# economic-reports-automation

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  preview.html  pyproject.toml  requirements.txt  test_email.py  test_fgv.py
dags/: fgv_newsletter_dag.py
google_app_script/: fgv_revista_conjuntura_economica.js  ipea_carta_conjuntura.js
src/config/: settings.py
src/extractors/: base_extractor.py  fgv_extractor.py
src/load/: email_sender.py
src/newsletter/: email_sender.py  renderer.py
src/newsletter/preview/: fgv_preview.html
src/newsletter/templates/: fgv_templates.html
