[tool.poetry]
name = "economic-reports-automation"
version = "0.1.0"
description = ""
authors = ["Rafaella Duarte <rafaella.d.d.carvalho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.5"
beautifulsoup4 = "^4.14.3"
jinja2 = "^3.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
